[metadata]
name = cgts_client-karl-blomdahl
version = 0.0.0
author = Karl Sundequist Blomdahl
author_email = karl.sundequist.blomdahl@gmail.com
description = Computer Go Tournament Client
url = https://github.com/Chicoryn/cgts_client
project_urls =
    Bug Tracker = https://github.com/Chicoryn/cgts_client/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
packages = find:

[options.entry_points]
console_scripts =
    cgts_client = cgts_client:main
